# lore

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.lore/: .gitignore  config.toml
.lore/codex/: CODEX.md  glossary.yaml
src/lore/: __init__.py  __main__.py  artifact.py  cli.py  codex.py  config.py  db.py  doctrine.py  frontmatter.py  glossary.py  graph.py  health.py  ids.py  init.py  knight.py  models.py  oracle.py  paths.py  priority.py  root.py  validators.py  watcher.py
tests/: conftest.py
tests/e2e/: conftest.py  test_artifact_list.py  test_artifact_new.py  test_block.py  test_board.py  test_claim.py  test_codex.py  test_codex_chaos.py  test_codex_map.py  test_concurrent_access.py  test_config.py  test_dependencies.py  test_doctrine_list.py  test_doctrine_new.py  test_doctrine_show.py  test_done.py  test_error_handling.py  test_filter_list.py  test_glossary.py  test_health.py  test_health_glossary.py  test_health_schemas.py  test_health_schemas_us005.py  test_health_schemas_us007.py  test_health_schemas_us008.py  test_help_group_param.py  test_knight_crud.py  test_knight_list.py  test_list_group_audit.py  test_lore_init.py  test_lore_init_glossary.py  test_lore_init_schema_clean.py  test_mission_crud.py  test_oracle.py  test_python_api.py  test_quest_crud.py  test_ready.py  test_schema_defaults_regression.py  test_schema_migrations.py  test_stats.py  (+2 more)
tests/unit/: conftest.py  test_artifact.py  test_cli_codex_list.py  test_cli_codex_show.py  test_cli_glossary.py  test_codex.py  test_config.py  test_cross_platform.py  test_derive_group.py  (+22 more)
(+228 files in other folders)
